<resources>
    <string name="app_name">设计吧</string>
    <string name="network">网络有误</string>
    <string name="selector_home">首页</string>
    <string name="selector_pic">案例</string>
    <string name="selector_stylist_option">设计师</string>
    <string name="selector_video">视频</string>
    <string name="selector_my">我的</string>
    <string name="selector_dynamic">动态</string>
    <string name="member">会员中心</string>
    <string name="buy">我的购买</string>
    <string name="video">视频缓存</string>
    <string name="news">我的消息</string>
    <string name="myfriend">我的好友</string>
    <string name="send_orders">我收到的派单</string>
    <string name="make">我收到的预约</string>
    <string name="projeck">我的签单项目</string>
    <string name="set_">设置</string>
    <string name="currency">我的金币</string>
    <string name="collect">我的收藏</string>
    <string name="zuinew">最新</string>
    <string name="hot">热门</string>
</resources>
